--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,25 @@
-*.class
+# Node.js
+node_modules/
+dist/
+build/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# TypeScript
+*.tsbuildinfo
 
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+# MacOS
+.DS_Store
 
-*.iml
+# VSCode
+.vscode/
 
-## Directory-based project format:
-.idea/
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-/.idea
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
-
-## File-based project format:
-*.ipr
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-
+# Optional: JetBrains already está no seu template
