--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Um pequeno projeto para testar suas habilidades como programador.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/server.ts",
+    "test": "cross-env NODE_ENV=test jest --runInBand",
+    "dev": "cross-env NODE_ENV=development ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -15,15 +15,27 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.9.1",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "ts-node-esm": "^0.0.6",
